<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/background2"
    tools:context=".LoginActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:backgroundTint="@color/semiTransparentColor"
        app:cardCornerRadius="30dp"
        android:elevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="24dp"
            android:background="@drawable/black_border_opaque">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="36sp"
                android:textStyle="bold" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:id="@+id/login_email"
                android:background="@drawable/black_border"
                android:layout_marginTop="30dp"
                android:padding="8dp"
                android:hint="@string/email"
                style="@style/CustomCursorStyle"
                android:drawableStart="@drawable/baseline_email_24"
                android:drawablePadding="8dp"
                android:textColor="@color/black"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                tools:ignore="VisualLintTextFieldSize" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:id="@+id/login_password"
                android:background="@drawable/black_border"
                android:layout_marginTop="20dp"
                android:padding="8dp"
                android:hint="@string/password"
                style="@style/CustomCursorStyle"
                android:inputType="textPassword"
                android:drawableStart="@drawable/baseline_password_24"
                android:drawablePadding="8dp"
                android:textColor="@color/black"
                android:importantForAutofill="no"
                tools:ignore="VisualLintTextFieldSize" />

            <Button
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="30dp"
                android:text="@string/loginBtn"
                android:textSize="18sp"
                app:cornerRadius="30dp"
                tools:ignore="DuplicateSpeakableTextCheck,VisualLintButtonSize" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/signupRedirectText"
                android:text="@string/not_yet_registered_sign_up"
                android:layout_gravity="center"
                android:padding="10dp"
                android:layout_marginTop="8dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/black" />




        </LinearLayout>


    </androidx.cardview.widget.CardView>

</LinearLayout>