<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mustard"
    tools:context=".HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/age_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="128dp"
            android:layout_marginTop="220dp"
            android:text=""
            android:drawableLeft="@drawable/baseline_cake_24"
            android:drawablePadding="8dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/age_editText"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/age"
            android:inputType="number"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/age_label"
            app:layout_constraintStart_toEndOf="@+id/age_label"
            app:layout_constraintTop_toTopOf="@+id/age_label"
            tools:ignore="LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/height_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:drawableLeft="@drawable/baseline_height_24"
            android:drawablePadding="8dp"
            android:text=""
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/age_label"
            app:layout_constraintTop_toBottomOf="@+id/age_label" />

        <EditText
            android:id="@+id/height_editText"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/height_cm"
            android:inputType="number"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/height_label"
            app:layout_constraintStart_toEndOf="@+id/height_label"
            app:layout_constraintTop_toTopOf="@+id/height_label"
            tools:ignore="LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/weight_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:drawableLeft="@drawable/baseline_monitor_weight_24"
            android:drawablePadding="8dp"
            android:text=""
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/height_label"
            app:layout_constraintTop_toBottomOf="@+id/height_label" />

        <EditText
            android:id="@+id/weight_editText"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/weight_kg"
            android:inputType="numberDecimal"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/weight_label"
            app:layout_constraintStart_toEndOf="@+id/weight_label"
            app:layout_constraintTop_toTopOf="@+id/weight_label"
            tools:ignore="LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/gender_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:drawableLeft="@drawable/baseline_wc_24"
            android:drawablePadding="8dp"
            android:text=""
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/weight_label"
            app:layout_constraintTop_toBottomOf="@+id/weight_label" />

        <Spinner
            android:id="@+id/gender_spinner"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:entries="@array/txtGender"
            app:layout_constraintBottom_toBottomOf="@+id/gender_label"
            app:layout_constraintStart_toEndOf="@+id/gender_label"
            app:layout_constraintTop_toTopOf="@+id/gender_label"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/activity_level_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:drawableLeft="@drawable/baseline_fitness_center_24"
            android:drawablePadding="8dp"
            android:text=""
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/gender_label"
            app:layout_constraintTop_toBottomOf="@+id/gender_label" />

        <Spinner
            android:id="@+id/activity_level_spinner"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:entries="@array/txtActivityLevel"
            app:layout_constraintBottom_toBottomOf="@+id/activity_level_label"
            app:layout_constraintStart_toEndOf="@+id/activity_level_label"
            app:layout_constraintTop_toTopOf="@+id/activity_level_label"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/objective_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:drawableLeft="@drawable/baseline_gps_fixed_24"
            android:drawablePadding="8dp"
            android:text=""
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/activity_level_label"
            app:layout_constraintTop_toBottomOf="@+id/activity_level_label" />

        <Spinner
            android:id="@+id/objective_spinner"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:entries="@array/txtObjective"
            app:layout_constraintBottom_toBottomOf="@+id/objective_label"
            app:layout_constraintStart_toEndOf="@+id/objective_label"
            app:layout_constraintTop_toTopOf="@+id/objective_label"
            tools:ignore="TouchTargetSizeCheck" />

        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/btn_bg"
            android:drawableLeft="@drawable/baseline_save_24"
            android:drawablePadding="8dp"
            android:text="Save"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/objective_spinner"
            app:layout_constraintVertical_bias="0.381"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/home_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_title"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/age_editText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.406" />

        <TextView
            android:id="@+id/home_greeting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:text="Hello!"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/home_title"
            app:layout_constraintStart_toStartOf="@+id/home_title"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <androidx.cardview.widget.CardView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="8dp"
            app:cardElevation="5dp"

            app:layout_constraintBottom_toTopOf="@+id/age_editText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/home_title">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="8dp"
                android:background="@color/blue_gray_900">

                <TextView
                    android:id="@+id/home_bmi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home_bmi_str"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/home_bmi_message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/home_bmi_message_str"
                    android:textColor="@color/white"
                    android:textSize="12sp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>